# pack-io

./: CHANGELOG.md  Cargo.toml  README.md  deny.toml
.github/workflows/: ci.yml
benches/: codec_bench.rs  comparative.rs
docs/: API.md  PERFORMANCE.md  PERFORMANCE_BASELINE.md  WIRE_FORMAT.md
docs/release/: v0.1.0.md  v0.2.0.md  v0.3.0.md  v0.4.0.md  v0.5.0.md  v0.6.0.md  v0.7.0.md  v0.8.0.md  v0.9.0.md  v1.0.0.md  v1.0.1.md
examples/: basic_roundtrip.rs  collections_tour.rs  derive_intro.rs  event_log.rs  primitive_tour.rs  protocol_handshake.rs  reuse_buffer.rs  schema_evolution.rs  streaming_io.rs  view_zero_copy.rs
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: decode_btreemap.rs  decode_btreeset.rs  decode_collection.rs  decode_enum_derive.rs  decode_hashset.rs  decode_string.rs  decode_struct_derive.rs  decode_tuple.rs  decode_vec_u8.rs  decode_versioned.rs  decode_view_bytes.rs  decode_view_collection.rs  decode_view_str.rs
pack-io-derive/: Cargo.toml  README.md
pack-io-derive/src/: lib.rs
src/: codec.rs  error.rs  impls.rs  io.rs  lib.rs  traits.rs  varint.rs  view.rs
tests/: adversarial.rs  byte_equivalence.rs  collections.rs  derive.rs  determinism.rs  hostile_inputs.rs  integration_scenarios.rs  roundtrip.rs  schema_evolution.rs  streaming.rs
