# ██████╗ ███████╗██████╗ ███████╗
# ██╔══██╗██╔════╝██╔══██╗██╔════╝
# ██████╔╝█████╗  ██████╔╝███████╗
# ██╔══██╗██╔══╝  ██╔═══╝ ╚════██║
# ██║  ██║███████╗██║     ███████║
# ╚═╝  ╚═╝╚══════╝╚═╝     ╚══════╝
#╔═══════════════════════════════╗
#║ Rust Efficiency & Performance ║
#╚═══════════════════════════════╝
[package]
name    = "pack-io"
version = "0.3.0"

# Minimum Supported Rust Version (MSRV)
rust-version = "1.85"
edition = "2024"

# License
license = "Apache-2.0 OR MIT"

# Readme
readme = "README.md"

# Description
description = "Compact binary wire format with schema evolution and zero-copy deserialization for Rust. The serialization substrate under network-protocol and Hive DB."

# Keywords (5 max)
keywords = [
    "serialization",
    "codec",
    "binary",
    "schema-evolution",
    "zero-copy"
]

# Categories
categories = [
    "encoding",
    "data-structures",
    "no-std"
]

# Links
homepage      = "https://github.com/jamesgober/pack-io"
repository    = "https://github.com/jamesgober/pack-io"
documentation = "https://docs.rs/pack-io"

# Authors
authors = [
    "James Gober <me@jamesgober.com>"
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
name = "pack_io"
path = "src/lib.rs"



# FEATURE FLAGS
# #################################
[features]
default = ["std"]

# Standard library. With it off, the crate is `no_std`.
std = []

# Derive macro support (#[derive(Serialize, Deserialize)]).
derive = []

# Schema versioning + evolution helpers (compatibility layer).
schema = []

# Optional serde compatibility shims (interop, not the default path).
serde = ["dep:serde"]



# DEPENDENCIES
# #################################
[dependencies]
serde = { version = "1", optional = true, default-features = false }



# DEV DEPENDENCIES
# #################################
[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest  = "1"

[target.'cfg(loom)'.dev-dependencies]
loom = "0.7"



# BENCHMARKS
# #################################
[[bench]]
name    = "codec_bench"
harness = false



# RELEASE PROFILE
# #################################
[profile.release]
opt-level     = 3
lto           = "fat"
codegen-units = 1
panic         = "abort"
strip         = "symbols"
