# ‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚ēó ‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚ēó‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚ēó ‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚ēó
# ‚Ėą‚Ėą‚ēĒ‚ēź‚ēź‚Ėą‚Ėą‚ēó‚Ėą‚Ėą‚ēĒ‚ēź‚ēź‚ēź‚ēź‚ēĚ‚Ėą‚Ėą‚ēĒ‚ēź‚ēź‚Ėą‚Ėą‚ēó‚Ėą‚Ėą‚ēĒ‚ēź‚ēź‚ēź‚ēź‚ēĚ
# ‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚ēĒ‚ēĚ‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚ēó  ‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚ēĒ‚ēĚ‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚ēó
# ‚Ėą‚Ėą‚ēĒ‚ēź‚ēź‚Ėą‚Ėą‚ēó‚Ėą‚Ėą‚ēĒ‚ēź‚ēź‚ēĚ  ‚Ėą‚Ėą‚ēĒ‚ēź‚ēź‚ēź‚ēĚ ‚ēö‚ēź‚ēź‚ēź‚ēź‚Ėą‚Ėą‚ēĎ
# ‚Ėą‚Ėą‚ēĎ  ‚Ėą‚Ėą‚ēĎ‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚ēó‚Ėą‚Ėą‚ēĎ     ‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚ēĎ
# ‚ēö‚ēź‚ēĚ  ‚ēö‚ēź‚ēĚ‚ēö‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēĚ‚ēö‚ēź‚ēĚ     ‚ēö‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēĚ
#‚ēĒ‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēó
#‚ēĎ Rust Efficiency & Performance ‚ēĎ
#‚ēö‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēĚ
[workspace]
members = ["pack-io-derive"]

[package]
name    = "pack-io"
version = "0.6.0"

# Minimum Supported Rust Version (MSRV)
rust-version = "1.85"
edition = "2024"

# License
license = "Apache-2.0 OR MIT"

# Readme
readme = "README.md"

# Description
description = "Compact binary wire format with schema evolution and zero-copy deserialization for Rust. The serialization substrate under network-protocol and Hive DB."

# Keywords (5 max)
keywords = [
    "serialization",
    "codec",
    "binary",
    "schema-evolution",
    "zero-copy"
]

# Categories
categories = [
    "encoding",
    "data-structures",
    "no-std"
]

# Links
homepage      = "https://github.com/jamesgober/pack-io"
repository    = "https://github.com/jamesgober/pack-io"
documentation = "https://docs.rs/pack-io"

# Authors
authors = [
    "James Gober <me@jamesgober.com>"
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
name = "pack_io"
path = "src/lib.rs"



# FEATURE FLAGS
# #################################
[features]
default = ["std"]

# Standard library. With it off, the crate is `no_std`.
std = []

# Derive macro support (#[derive(Serialize, Deserialize, DeserializeView)]).
# Pulls in the companion `pack-io-derive` proc-macro crate.
derive = ["dep:pack-io-derive"]

# Schema versioning + evolution helpers. Activates the schema attributes
# (`#[pack_io(version = N)]`, `#[pack_io(since = N)]`, `#[pack_io(deprecated = N)]`)
# read by the derive macro, so pulling this in implies `derive`.
schema = ["derive"]

# Optional serde compatibility shims (interop, not the default path).
serde = ["dep:serde"]



# DEPENDENCIES
# #################################
[dependencies]
# Derive macro companion crate. The version is exactly pinned to the
# parent crate version so a downstream consumer cannot mix-and-match
# derive output across pack-io revisions.
pack-io-derive = { version = "=0.6.0", path = "pack-io-derive", optional = true }
serde          = { version = "1", optional = true, default-features = false }



# DEV DEPENDENCIES
# #################################
[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest  = "1"

# Comparative benchmark fixtures ‚ÄĒ only enter at bench / test compile
# time, never the published crate. Justified per REPS: each is a
# concrete competitor we measure ourselves against in `benches/comparative.rs`.
bincode  = { version = "2", features = ["serde"] }
postcard = { version = "1", default-features = false, features = ["alloc", "use-std"] }
rkyv     = { version = "0.8", default-features = false, features = ["alloc", "bytecheck"] }
serde    = { version = "1", features = ["derive"] }

[target.'cfg(loom)'.dev-dependencies]
loom = "0.7"



# BENCHMARKS
# #################################
[[bench]]
name              = "codec_bench"
harness           = false
required-features = ["derive"]

[[bench]]
name              = "comparative"
harness           = false
required-features = ["derive"]


# DERIVE-DEPENDENT EXAMPLES + TESTS
# #################################
# Cargo auto-discovers examples and integration tests from `examples/` and
# `tests/`. We declare the derive-using ones explicitly so `cargo build`
# (and rust-analyzer) skip them cleanly when the `derive` feature is off,
# instead of surfacing "cannot find derive macro" compile errors.

[[example]]
name              = "derive_intro"
required-features = ["derive"]

[[example]]
name              = "view_zero_copy"
required-features = ["derive"]

[[example]]
name              = "schema_evolution"
required-features = ["schema"]

[[test]]
name              = "derive"
path              = "tests/derive.rs"
required-features = ["derive"]

[[test]]
name              = "schema_evolution"
path              = "tests/schema_evolution.rs"
required-features = ["schema"]



# RELEASE PROFILE
# #################################
[profile.release]
opt-level     = 3
lto           = "fat"
codegen-units = 1
panic         = "abort"
strip         = "symbols"
